[package]
name = "skip-linked-list"
version = "0.1.0"
authors = ["Xiao Jiang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"

[dev-dependencies]
criterion="0.3.3"

[[bench]]
name = "skip_linked_list_vs_vec"
harness = false
