[package]
name = "skip-linked-list"
version = "0.1.1"
authors = ["Xiao Jiang <showbufire@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a skiplist-backed linked list that support fast random writes, written in Rust."
keywords = ["skiplist", "linked-list", "data-structure"]
repository = "https://github.com/showbufire/skip-linked-list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"

[dev-dependencies]
criterion="0.3.3"

[[bench]]
name = "skip_linked_list_vs_vec"
harness = false
